--- a/src/SqlReader.Tests/App.config
+++ b/src/SqlReader.Tests/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <connectionStrings>
-        <clear/>
-        <add name="Database" connectionString="server=winserver2012; database=Nexus; user=deploy; password=shoutIT0ut;" providerName="System.Data.SqlClient"/>
+        <clear />
+        <add name="TestDb" connectionString="server=(localdb)\v11.0; database=TestDb; integrated security=true;" />
+        <add name="MasterDb" connectionString="server=(localdb)\v11.0; database=master; integrated security=true;" />
     </connectionStrings>
 </configuration>
