--- a/src/SqlReader/SqlReader.csproj
+++ b/src/SqlReader/SqlReader.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlReader.cs" />
+    <Compile Include="ObjectMapper.cs" />
+    <Compile Include="DataReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
